--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>Dit is de header</header>
-    <main>Hierin staat mijn main gedeelte</main>
+    <main>Hierin staat mijn main gedeelte.<br> DIT IS EEN AANPASSING</main>
     <footer>Dit is de footer</footer>
 </body>
 </html>
